--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ collections:
 defaults:
   - scope:
       path: ""
+      path: "assets/data"
       type: "questions"
     values:
       layout: "question"
